--- a/content/themes/fsinf-v2/assets/less/bootstrap/bootstrap.less
+++ b/content/themes/fsinf-v2/assets/less/bootstrap/bootstrap.less
@@ -57,3 +57,6 @@
 // Utility classes
 @import "utilities.less";
 @import "responsive-utilities.less";
+
+// Custom Additions
+@import "custom.less";
