--- a/content/themes/fsinf-v2/style.css
+++ b/content/themes/fsinf-v2/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Roots
-Theme URI:          http://roots.io/
-Description:        Roots is a starting WordPress theme made for developers that's based on HTML5 Boilerplate and Bootstrap. <a href="https://github.com/retlehs/roots/contributors">Contribute on GitHub</a>
-Version:            6.5.0
-Author:             Ben Word
-Author URI:         http://benword.com/
+Theme Name:         fsinf-v2 (aka Roots)
+Theme URI:          https://github.com/enplotz/fsinf-v2
+Description:        Our new website, based on Roots. <a href="https://github.com/enplotz/fsinf-v2">Contribute on GitHub</a>
+Version:            1.1
+Author:             Manuel Hotz
+Author URI:         http://fachschaft.inf.uni-konstanz.de/
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
