--- a/content/themes/fsinf-v2/assets/less/bootstrap/bootstrap.less
+++ b/content/themes/fsinf-v2/assets/less/bootstrap/bootstrap.less
@@ -60,3 +60,6 @@
 
 // Custom Additions
 @import "custom.less";
+@import "flatly/bootswatch.less";
+@import "flatly/variables.less";
+@import "flatly/fs-variables.less";
