Improve page styling

--- a/content/themes/fsinf-v2/assets/less/bootstrap/custom.less
+++ b/content/themes/fsinf-v2/assets/less/bootstrap/custom.less
@@ -24,3 +24,22 @@
     -webkit-transform:rotate(360deg);
     /*-webkit-font-smoothing:antialiased;*/
 }
+
+.page-header p.meta {
+    margin-bottom: 0;
+}
+
+.page-header .entry-title {
+    margin-top: 0;
+}
+
+.main .page-header {
+    margin-bottom: 0px;
+    border-bottom: 1px solid transparent;
+}
+
+.main article.post {
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ecf0f1;
+}
